--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ buck-out/
 \.buckd/
 *.keystore
 
+# CONFIG
+/app/src/firebase.js
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
