--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"firebase": "^4.5.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
-		"react-native-fcm": "^9.7.2"
+		"react-native-fcm": "^9.7.2",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
