--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
 		"react-native-fcm": "^9.7.2",
+		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
+		"redux-logger": "^3.0.6",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
-		"jest": "21.2.1",
+		"jest": "^21.2.1",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
