--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
 	"dependencies": {
 		"firebase": "^4.5.0",
 		"react": "16.0.0-alpha.12",
+		"react-addons-test-utils": "^15.6.2",
 		"react-native": "0.48.4",
 		"react-native-fcm": "^9.7.2",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
+		"redux-mock-store": "^1.3.0",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
-		"babel-jest": "21.2.0",
+		"babel-jest": "^21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "^21.2.1",
-		"react-test-renderer": "16.0.0-alpha.12"
+		"react-test-renderer": "^16.0.0-alpha.12"
 	},
 	"jest": {
 		"preset": "react-native"
