--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"firebase": "^4.5.0",
+		"native-base": "^2.3.2",
 		"react": "16.0.0-alpha.12",
 		"react-addons-test-utils": "^15.6.2",
 		"react-native": "0.48.4",
