--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"native-base": "^2.3.2",
 		"react": "16.0.0-alpha.12",
 		"react-addons-test-utils": "^15.6.2",
+		"react-dom": "^15.6.2",
 		"react-native": "0.48.4",
 		"react-native-fcm": "^9.7.2",
+		"react-native-vector-icons": "^4.4.2",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
