--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
 	},
 	"dependencies": {
 		"firebase": "^4.5.0",
+		"install": "^0.10.1",
 		"native-base": "^2.3.2",
+		"npm": "^5.5.1",
 		"react": "16.0.0-alpha.12",
 		"react-addons-test-utils": "^15.6.2",
 		"react-dom": "^15.6.2",
 		"react-native": "0.48.4",
 		"react-native-fcm": "^9.7.2",
+		"react-native-linear-gradient": "^2.3.0",
 		"react-native-vector-icons": "^4.4.2",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
