separate listItem into new component

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"react-native": "0.48.4",
 		"react-native-fcm": "^9.7.2",
 		"react-native-linear-gradient": "^2.3.0",
+		"react-native-swipeout": "^2.2.2",
 		"react-native-vector-icons": "^4.4.2",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
