--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"firebase": "^4.5.0",
 		"install": "^0.10.1",
+		"moment": "^2.19.1",
 		"native-base": "^2.3.2",
 		"npm": "^5.5.1",
 		"react": "16.0.0-alpha.12",
