--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"redux": "^3.7.2",
 		"redux-logger": "^3.0.6",
 		"redux-mock-store": "^1.3.0",
+		"redux-persist": "^5.2.2",
 		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
